<resources>
    <string name="app_name">LiveStock</string>
    <string name="welcome">WELCOME MOBILE PASTORALIST!</string>

    <string name="coordinates">Coordinates:</string>
    <string name="address">Address:</string>
    <string name="weather">Weather:</string>


    <string name="warnings">Warnings</string>
    <string name="view_current_location">View Current Location</string>
    <string name="view_suggested_locations">View Suggested Locations</string>
    <string name="Check_weather">View Weather</string>
    <string name="information">View Information</string>
    <string name="notifications">Notifications</string>
    <string name="connect">Connect</string>

    <string name="warnings_welcome">Warnings</string>
    <string name="archived_warnings">Archived Warnings</string>
    <string name="title1">Drought</string>
    <string name="description1">A drought has been forecasted for the location due to a severe heatwave that has been going on in most parts of this region,
        therefore it is suggested that you urgently move to any of the suggested regions that have been specifically classified for your needs according to your livestock. </string>
    <string name="title2">Animal Health</string>
    <string name="description2">As it is a season of drought, it is of crucial importance that as you move to the next region, wherever there is a river or water available, camp there for
        sometime making sure that all your livestock consumes sufficient drink for the journey. </string>
    <string name="title3">Be Alert</string>
    <string name="description3">As you sojourn to the next region, keep watch for anything that may cause wild forest fires that can endanger you and your livestock. Stay hydrated as you possibly
        can and avoid starting fires. </string>


    <string name="notifications_welcome">Notifications</string>
    <string name="emails_welcome">Contacts</string>
    <string name="notification_description">Here are some links to email addresses of the farmer and the two tribes that are also currently occupying the region you are headed to.
        contact them and make arrangements, also, find attached in the information page the laws and rules that govern their region.</string>
    <string name="email1">tunkyb@gmail.com</string>
    <string name="email2">pt2009-0570@gmail.com</string>


    <!--Navigation Bar Sections-->
    <!-- Nav Drawer Menu Items -->
    <string-array name="medianav_drawer_items">
        <item>My Portfolio</item>
        <item>Reports</item>
        <!--item>HeartList</item-->
        <item>Invite a friend</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="medianav_drawer_icons">
        <item>@drawable/navshadow</item>
        <item>@drawable/navdiscover</item>
        <!--item>@drawable/navheart</item-->
        <item>@drawable/navnew</item>
        <item>@drawable/navsettings</item>
    </array>

    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_full_screen_browser">FullScreen Browser</string>
    <string name="message_Ninternet">You do not have a internet Connection</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_farmer_portfolio">FarmerPortfolio</string>

    <!-- Camera upload  Items -->
    <string name="btnTakePicture">Capture </string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>

    <string name="error_field_required">Feild Required</string>
    <string name="error_invalid_password">Invalid Password</string>

    <string name="available_land_welcome">Available Land</string>
    <string name="available_land_description">There is land available that has the resources that are required for you and your livestock. However, this land is occupied by two other cultures,
       they are willing to share their resources with you. Information of their available resources is linked with their laws and government rules. Below are their contacts.</string>
    <string name="title_activity_about">About</string>


    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>

    <string name="title_activity_forgot_password">Password Recovery</string>
    <string name="toast_saved">Image succeffuly saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save image </string>


    <string name="toast_wallpaper_set">Wallpapaer updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>

</resources>
