<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bongi.emobilepastoralism.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/notifications_welcome"
            android:textColor="@color/titles"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_land_welcome"
            android:layout_marginBottom="5dp"
            android:textColor="@color/titles"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_land_description"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emails_welcome"
            android:layout_marginBottom="5dp"
            android:textColor="@color/titles"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_description"
            android:layout_marginBottom="16dp"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email1"
            android:autoLink="web"
            android:id="@+id/email_ad1"
            android:textColor="@color/links"
            android:linksClickable="true"
            android:layout_marginBottom="10dp"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:autoLink="web"
            android:id="@+id/email_ad2"
            android:textColor="@color/links"
            android:linksClickable="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_gravity="bottom"/>


    </LinearLayout>

</ScrollView>