<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- Capture picture button -->


        <Button
            android:id="@+id/btnCapturePicture"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bluebutton"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btnTakePicture"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textColor="@color/txt_font" />

        <!-- Record video button -->

        <Button
            android:id="@+id/btnRecordVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bluebutton"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btnRecordVideo"
            android:textColor="@color/white"
            android:clickable="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnGalleryImage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bluebutton"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="Gallery"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:textColor="@color/txt_font" />

        <Button
            android:id="@+id/btnCancle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:onClick="closeView"
            android:clickable="true"
            android:text="Cancel"/>
    </LinearLayout>

</RelativeLayout>